# excelim_qt

./: CMakeLists.txt
src/: main.cpp  qt.cpp  qt.h  qt.ui
